--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "this is for internal stock(inventory) management system",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "start": "node server.js",         
+    "dev": "nodemon server.js",       
+    "test": "jest"                    
   },
   "keywords": [],
   "author": "",
