--- a/.env
+++ b/.env
@@ -3,4 +3,4 @@ MONGO_URI=mongodb+srv://kemmah5833:efLhMK6Th7ER370u@cluster0.bqxqw.mongodb.net/
 JWT_SECRET=i love quantum computing
 EMAIL=kemmah5833@gmail.com
 EMAIL_PASSWORD=oduc yzok gdhu eghb
-CLIENT_URL=http://localhost:3000
+CLIENT_URL=https://linex-inventory.vercel.app/
